@@ -1,3 +1,12 @@
+2003-03-14  Shivram U  <shivaram.upadhyayula@wipro.com>
+
+	* gkb.[ch], system.c (gkb_update_handlers): Added a new function, which
+	connects or disconnects the button press event handler and the 
+	gdk_window_filter.
+	gkb_update(): If we are updating the keymap disconnect the handlers
+	gkb_set_keymap_idle (): Reconnect the handlers.
+	Fixes (#108378)
+
 2003-03-13  Chema Celorio  <chema@celorio.com>
 
 	* xmodmap/xmodmap.es: key 34 is dead_acute not dead_grave for spanish
